# liblora

./: .gitignore  CMakeLists.txt  Pipfile  README.md  platformio.ini  time_on_air_calculator.py
OLD_BACKUP/: platformio.ini
OLD_BACKUP/lib/liblora/include/liblora/sx127x/: radio.h  reg.h
cmake/: armv6-rpi-linux-gnueabihf.cmake  toolchain-rpi.cmake
core/classes/: sx127x.hpp
core/include/liblora/core/: board.h  utils.h
core/include/liblora/core/radios/: sx127x.h  sx127x_reg.h
core/lib/: board.h  utils.c  utils.h
core/lib/sx127x/: radio.c  radio.h  reg.c  reg.h
core/src/: sx127x.c  sx127x_reg.c  utils.c
docs/: Doxyfile  conf.py  index.rst
docs/references/: index.rst
docs/references/core/: board.rst  index.rst  utils.rst
docs/references/core/radios/: sx127x.rst  sx127x_reg.rst
examples/listener/: main.c
examples/pio/simple-listener/: platformio.ini
examples/pio/simple-listener/lib/: liblora
examples/pio/simple-listener/src/: main.cpp
include/: drivers.h  rf95.h
include/liblora/: drivers.h  liblora.h  rf95.h
lib/liblora/: extra_script.py  library.json
lib/liblora/examples/listener/: main.c
lib/liblora/include/liblora/: board.h  liblora.h  rf95.h  utils.h
lib/liblora/include/liblora/sx127x/: radio.h
lib/liblora/src/: board_arduino.cpp  board_wiringpi.c  hal.h  hal_arduino.cpp  hal_wiringpi.c  machine.c  machine.h  rf95.c  rf95.cpp  utils.c
lib/liblora/src/c/: hal.h  hal_arduino.c  hal_wiringpi.c
lib/liblora/src/frameworks/: arduino.c  wiringpi.c
lib/liblora/src/machine/: com.h  gpio.h  time.h
lib/liblora/src/reg/: sx127x.c
lib/liblora/src/sx127x/: radio.c  reg.c
liblora-c/: CMakeLists.txt
liblora-c/examples/listener/: main.c
liblora-c/include/liblora/: drivers.h  rf95.h
liblora-c/src/: _rf95.h  rf95.c
liblora-c/src/drivers/: _drivers.h  driver.h  wiringpi.c
liblora-python/: example.py  pyproject.toml
liblora-python/lora/: _liblora.py  rf95.py
platform-io/src/: board_arduino.cpp  board_wiringpi.c  classes  lib  sx127x.cpp  sx127x.hpp
src/: _rf95.h  arduino.cpp  liblora_aux.h  liblora_com.c  liblora_com.h  liblora_gpio.h  liblora_spi.h  raspberry.cpp  rf95.c  spi.c  spi.h  test.cpp  utils.c  utils.h
src/board/: board.h  rpi.c
src/drivers/: _drivers.h  drivers.c  wiringpi.c
src/frameworks/: liblora_wiringpi.c  wiringpi.c
src/machine/: com.c  com.h
src/reg/: sx127x.c  sx127x.h
src/sx127x/: config.h  driver.c  driver.h  registers.h
