[tool.poetry]
name = "liblora-python"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lora"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
